# serializer version: 1
# name: TestCreate.test_ok[json]
  dict({
    'change_count': 1,
    'contributors': list([
      dict({
        'count': 1,
        'handle': 'leeashley',
        'id': 1,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'id': 1,
    'manifest': dict({
      'bar': 2,
      'foo': 1,
    }),
    'modified_otu_count': 1,
    'otus': list([
      dict({
        'change_count': 1,
        'id': 'otu_1',
        'name': 'Tobacco mosaic virus',
      }),
    ]),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Foo',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: TestCreate.test_ok[location]
  'https://virtool.example.com/indexes/1'
# ---
# name: TestFind.test_find[active]
  dict({
    'change_count': 12,
    'documents': list([
      dict({
        'change_count': 2,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'modified_otu_count': 2,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 2,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
      dict({
        'change_count': 4,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'modified_otu_count': 3,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 1,
      }),
    ]),
    'found_count': 2,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
    'total_otu_count': 123,
  })
# ---
# name: TestFind.test_find[archived]
  dict({
    'change_count': 12,
    'documents': list([
      dict({
        'change_count': 0,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'modified_otu_count': 0,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 3,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
    'total_otu_count': 123,
  })
# ---
# name: TestFind.test_find[default]
  dict({
    'change_count': 12,
    'documents': list([
      dict({
        'change_count': 0,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'modified_otu_count': 0,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 3,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
      dict({
        'change_count': 2,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'modified_otu_count': 2,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 2,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
      dict({
        'change_count': 4,
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'modified_otu_count': 3,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 1,
      }),
    ]),
    'found_count': 3,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
    'total_otu_count': 123,
  })
# ---
# name: TestFind.test_ready[active]
  list([
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 2,
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 2,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T22:00:00Z',
      'id': 1,
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 1,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 1,
    }),
  ])
# ---
# name: TestFind.test_ready[archived]
  list([
    dict({
      'change_count': 0,
      'created_at': '2015-10-07T00:00:00Z',
      'id': 3,
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 3,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
  ])
# ---
# name: TestFind.test_ready[default]
  list([
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T20:00:00Z',
      'id': 2,
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 2,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T22:00:00Z',
      'id': 1,
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 1,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 1,
    }),
    dict({
      'change_count': 0,
      'created_at': '2015-10-07T00:00:00Z',
      'id': 3,
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 3,
        'name': 'Reference',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
  ])
# ---
# name: test_find_history[None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited sequence wrta20tr in Islolate chilli-CR',
        'id': 'kjs8sa99.3',
        'index': dict({
          'id': 1,
          'version': 0,
        }),
        'method_name': 'edit_sequence',
        'otu': dict({
          'id': 'kjs8sa99',
          'name': 'Foo',
          'version': 3,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.2',
        'index': dict({
          'id': 1,
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 2,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.1',
        'index': dict({
          'id': 1,
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 1,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.0',
        'index': dict({
          'id': 1,
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 4,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 4,
  })
# ---
# name: test_get[None]
  dict({
    'change_count': 3,
    'contributors': list([
      dict({
        'count': 2,
        'handle': 'myersmitchell',
        'id': 2,
      }),
      dict({
        'count': 1,
        'handle': 'modonnell',
        'id': 3,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'id': 1,
    'manifest': dict({
      'foo': 2,
    }),
    'modified_otu_count': 2,
    'otus': list([
      dict({
        'change_count': 1,
        'id': 'pvx',
        'name': 'Potato virus X',
      }),
      dict({
        'change_count': 2,
        'id': 'tmv',
        'name': 'Tobacco mosaic virus',
      }),
    ]),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Reference',
    }),
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'version': 0,
  })
# ---
